--- a/flux/flux-deployment.yaml
+++ b/flux/flux-deployment.yaml
@@ -148,8 +148,8 @@ spec:
         # to those under the following relative paths in the git repository
         # - --git-path=subdir1,subdir2
         - --git-label=flux
-        - --git-user=Flux
-        - --git-email=your@email.com
+        - --git-user=gitops
+        - --git-email=gitops@myorg.com
 
         # Include these two to enable git commit signing
         # - --git-gpg-key-import=/root/gpg-import
