--- a/base/amazon-cloudwatch/cloudwatch-agent-configmap.yaml
+++ b/base/amazon-cloudwatch/cloudwatch-agent-configmap.yaml
@@ -8,7 +8,7 @@ data:
       "logs": {
         "metrics_collected": {
           "kubernetes": {
-            "cluster_name": "eksworkshop-eksctl",
+            "cluster_name": "cluster-21",
             "metrics_collection_interval": 60
           }
         },
