--- a/base/amazon-cloudwatch/fluentd-configmap-cluster-info.yaml
+++ b/base/amazon-cloudwatch/fluentd-configmap-cluster-info.yaml
@@ -1,14 +1,14 @@
 ---
 apiVersion: v1
 data:
-  cluster.name: eksworkshop-eksctl
+  cluster.name: cluster-21
   logs.region: ap-northeast-1
   # The below configuration file is in JSON format.
   # Please ensure you keep it well-formed if you modify it.
   cluster-info.json: |
     {
       "cluster": {
-        "name": "eksworkshop-eksctl"
+        "name": "cluster-21"
       },
       "logs": {
         "region": "ap-northeast-1"
